Apache ManifoldCF Plugin for Elastic Search change Log
$Id$

======================= Release 0.1 =====================

Initial commit.
(Karl Wright)